<resources>
    <string name="app_name">A生活商城</string>
    <string name="bottom_layout_main">主页</string>
    <string name="bottom_layout_message">消息</string>
    <string name="bottom_layout_health">健康</string>
    <string name="bottom_layout_center">个人中心</string>
    <string name="disLogin">用户您好</string>
    <string name="text_login">请登录</string>
    <string name="setting_card">我的就诊卡</string>
    <string name="setting_appoint">我的预约</string>
    <string name="setting_about">关于</string>
    <string name="setting_recommend">推荐好友</string>
    <string name="main_detail">医院简介</string>
    <string name="main_professor">专家医师</string>
    <string name="main_guide">医院导航</string>
    <string name="main_registrate_day">当日挂号</string>
    <string name="main_registrate_day_detail">快速挂当日号</string>
    <string name="main_registrate_recommend">预约挂号</string>
    <string name="main_registrate_recommend_detail">预约未来7天号源</string>
    <string name="main_physical">体检中心</string>
    <string name="main_report">查看报告单</string>
    <string name="main_cost">住院费用</string>
    <string name="main_office">科室一览</string>
    <string name="main_handbook">服务指南</string>
    <string name="main_question">健康质询</string>
    <string name="hosipital_detail_short">河南省长垣县博爱路南段8号 邮编：453400</string>
    <string name="hosipital_detail_hotline">健康热线</string>
    <string name="hosipital_detail_text_hotline">037_8882618</string>
    <string name="hosipital_detail_fax">传真</string>
    <string name="hosipital_detail_email">电子邮件</string>
    <string name="hosipital_detail_website">官网</string>
    <string name="hosipital_detail_text_website">http://www.honlivhp.com</string>
    <string name="hosipital_detail_text_email">honliv.com</string>
    <string name="hosipital_detail_text_fax">0337-55555</string>
    <string name="hosipital_detail_detail">医院简介</string>
    <string name="hosipital_detail_text_detail">hahahahhahahahah</string>
    <string name="hosipital_guide_traffic">医院交通</string>
    <string name="hosipital_guide_hotline">急诊热线</string>
    <string name="hosipital_guide_guide_doctor">就诊导航</string>
    <string name="hosipital_guide_guide_map">地图导航</string>
    <string name="hosipital_guide_local">周边商户</string>
    <string name="office_select">选择科室</string>
    <string name="text_cellphone">手 机</string>
    <string name="hint_cellphone">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="text_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="original_pwd">原始密码</string>
    <string name="hint_original_pwd">请输入原始密码</string>
    <string name="alert_pwd">*密码只能包含数字，英文字母，并且至少包含6位</string>
    <string name="hint_new_pwd">请输入新密码</string>
    <string name="new_pwd">新密码</string>
    <string name="hint_sure_pwd">确认密码</string>
    <string name="sure_pwd">确认密码</string>
    <string name="sure_change">确认修改</string>
    <string name="text_complete_imfo">完善个人信息</string>
    <string name="alert_remind">温馨提示</string>
    <string name="alert_remind_detail">1.个人信息必须与您在我院挂号窗口下的信息保持一致，否则不能实现挂号预约，报告查询功能。2.基本信息30天内只能修改一次，请认真填写</string>
    <string name="text_name">姓名</string>
    <string name="hint_name">请输入姓名</string>
    <string name="text_idcard">身份证</string>
    <string name="hint_idcard">请输入身份证</string>
    <string name="text_add_card">添加就诊卡</string>
    <string name="text_card_number">就诊卡号</string>
    <string name="hint_card_number">持卡人就诊卡号</string>
    <string name="hint_card_idcard">持卡人身份证号码</string>
    <string name="text_add">添加</string>
    <string name="setting_base_info">基本信息</string>
    <string name="setting_change_pwd">修改密码</string>
    <string name="setting_book">我的预约</string>
    <string name="setting_logout">注销登录</string>
    <string name="alert_remind_register">1.请使用院内登记的手机号码注册2.完善更多信息，享受更多服务</string>
    <string name="title_register">手机号码注册</string>
    <string name="hint_pwd">密码</string>
    <string name="alert_note">请输入短信验证码，如在规定时间内没有收到验证码请重新发送短信验证码验证。</string>
    <string name="text_note">短信码</string>
    <string name="hint_note">请输入收到的短信验证码</string>
    <string name="sofeware_protocol">软件许可及服务协议</string>
    <string name="text_book_log">预约记录</string>
    <string name="text_book_office">预约科室</string>
    <string name="text_book_doctor">预约医生</string>
    <string name="text_book_time">预约时间</string>
    <string name="text_book_number">预约序号</string>
    <string name="text_send_note">发送验证码</string>
    <string name="again_exit">再按一次退出</string>



    <string name="servicesphone">0312-3376867</string>
    <string name="settingphone">客户电话：0312-3376867"</string>
    <string name="companyname">河南宏力一生活有限公司</string>
    <string name="companyyear">Copyright © 2014-2016</string>

    <string name="is_positive">确定</string>
    <string name="english_name">Fashion</string>
    <string name="app_version_prefix">Maticsoft_Shop_</string>
    <string name="install_source_suffix">.apk</string>

    <!-- for baidu push -->
    <!-- for baidu push  end -->

    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>

    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="commodity_null">商品已卖完!!!</string>
    <string name="buy_fail">购买失败，请重试！！！</string>
    <string name="nearby_market">附近站点</string>
    <string name="my_favorites_lin">我的收藏</string>
    <string name="my_address_manage">地址管理</string>
    <string name="my_Inbox_lin">收件箱</string>
    <string name="text_limit">限时抢购</string>
    <string name="text_bargain">特价专区</string>
    <string name="text_like">你可能喜欢</string>
    <string name="more"><![CDATA[更多>>]]></string>
    <string name="about_detail">   河南宏力一生活有限公司，是一家连锁超市为主，多业态发展的连锁社区超市，以自有产品为主，倡导绿色、安全、新鲜的产品理念，引导大众消费习惯，为大众提供环境优雅，产品安全，服务高端的购物体验。 “邻点”引用国外先进的运营理念，将信息技术深入运用于零售经营，借助数据分析实现精细化管理，提升经营管理绩效，打造高科技型零售企业。公司计划以长垣为中心，用5年时间在全省开设1000家，最终形成以连锁经营、物流配送、电子商务为一体的大型商业连锁集团。</string>
    <string name="loadmore">加载更多....</string>
    <string name="order_num">订单编号：</string>
    <string name="order_money">订单总价：￥</string>
    <string name="order_day">订单日期：</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_success_detail">您的订单已提交，我们会尽快安排发货！</string>
    <string name="pay_fail_detail">您的订单支付失败，请重新支付！！！</string>
    <string name="pay_cancel_detail">您的订单支付取消，请重新支付！！！</string>
    <string name="card_no">卡号：</string>
    <string name="text_pwd">密码：</string>
    <string name="text_bind">绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_fail">绑定失败</string>
    <string name="text_cardNo">卡号：</string>
    <string name="text_hxt_name">持卡人：</string>
    <string name="text_hxt_cardType">卡类型：</string>
    <string name="text_hxt_phone">手机号：</string>
    <string name="text_hxt_bindDateTime">绑定时间：</string>
    <string name="text_unbind">解除绑定</string>
    <string name="text_hxt_sex">性别：</string>
    <string name="text_hxt_bind">绑定宏信通</string>
    <string name="text_hxt_input_pwd">输入宏信通密码</string>
    <string name="text_pay">支付</string>
    <string name="hint_hxt_cardno">请输入卡号</string>
    <string name="hint_hxt_pwd">请输入密码</string>
    <string name="my_hxt_tilte">我的宏信通</string>
    <string name="my_hxt_select">选择宏信通卡</string>
    <string name="text_weixin_pay">微信支付</string>
    <string name="text_hxt_pay">宏信通</string>
    <string name="text_ali_pay">支付宝(手机版)</string>
    <string name="text_deliver_pay">货到付款</string>
    <string name="order_sure">确认订单</string>
    <string name="text_pay_type">支付:</string>
    <string name="text_send_type">配送:</string>
    <string name="text_hxt_send">宏力配送</string>
    <string name="text_pay_send_type">支付配送方式</string>
    <string name="submit_order">提交订单</string>
    <string name="text_bargain_price">特价：</string>
    <string name="text_price">价格：</string>
    <string name="bottom_layout_search">搜索</string>
    <string name="bottom_layout_class">分类</string>
    <string name="bottom_layout_shopping">购物车</string>
    <string name="reLogin">登陆状态错误,请重新登录</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="order_detail">订单详情</string>
</resources>
