<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_title"
            android:text="@string/original_pwd" />

        <EditText
            android:id="@+id/et_original_pwd"
            style="@style/style_edittext"
            android:hint="@string/hint_original_pwd" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_title"
            android:text="@string/new_pwd" />

        <EditText
            android:id="@+id/et_new_pwd"
            style="@style/style_edittext"
            android:hint="@string/hint_new_pwd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_title"
            android:text="@string/sure_pwd" />

        <EditText
            android:id="@+id/et_sure_pwd"
            style="@style/style_edittext"
            android:hint="@string/hint_sure_pwd" />
    </LinearLayout>

    <Button
        style="@style/style_button"
        android:layout_marginTop="10dp"
        android:background="@color/background_green"
        android:text="@string/sure_change" />
</LinearLayout>