<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/alert_remind" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:text="@string/alert_remind_register" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_cellphone" />

        <EditText
            android:id="@+id/et_cellphone"
            style="@style/style_edittext"
            android:hint="@string/hint_cellphone" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_pwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_pwd" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/style_edittext"
            android:hint="@string/hint_pwd" />
    </LinearLayout>

    <TextView
        style="@style/style_text_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_note" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_content"
            android:layout_marginLeft="10dp"
            android:text="@string/text_note" />

        <EditText
            android:id="@+id/et_note"
            style="@style/style_edittext"
            android:hint="@string/hint_note" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/style_text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:text="注册代表你同意" />

        <TextView
            android:id="@+id/sofewareprotocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sofeware_protocol"
            android:textColor="@color/text_blue" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        style="@style/style_button_green"
        android:layout_marginTop="10dp"
        android:text="@string/register" />
</LinearLayout>