<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- <include
         android:id="@+id/layout_top"
         layout="@layout/layout_top" />-->
    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
        app:titleTextAppearance="@style/Toolbar_TextAppearance_Green"/>-->
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@mipmap/icon_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_black_title"
                android:text="@string/app_name" />

            <TextView
                style="@style/text_gray_content"
                android:text="@string/hosipital_detail_short" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/hosipital_layout_bus">

                <ImageView style="@style/hosipital_bus_icon" />

                <TextView
                    style="@style/hosipital_bus_text"
                    android:text="@string/hosipital_detail_hotline" />
            </LinearLayout>

            <TextView
                style="@style/hosipital_detail_text_content"
                android:text="@string/hosipital_detail_text_hotline" />

            <LinearLayout style="@style/hosipital_layout_bus">

                <ImageView style="@style/hosipital_bus_icon" />

                <TextView
                    style="@style/hosipital_bus_text"
                    android:text="@string/hosipital_detail_fax" />
            </LinearLayout>

            <TextView
                style="@style/hosipital_detail_text_content"
                android:text="@string/hosipital_detail_text_fax" />

            <LinearLayout style="@style/hosipital_layout_bus">

                <ImageView style="@style/hosipital_bus_icon" />

                <TextView
                    style="@style/hosipital_bus_text"
                    android:text="@string/hosipital_detail_email" />
            </LinearLayout>

            <TextView
                style="@style/hosipital_detail_text_content"
                android:text="@string/hosipital_detail_text_email" />

            <LinearLayout style="@style/hosipital_layout_bus">

                <ImageView style="@style/hosipital_bus_icon" />

                <TextView
                    style="@style/hosipital_bus_text"
                    android:text="@string/hosipital_detail_website" />
            </LinearLayout>

            <TextView
                style="@style/hosipital_detail_text_content"
                android:text="@string/hosipital_detail_text_website" />

            <LinearLayout style="@style/hosipital_layout_bus">

                <ImageView style="@style/hosipital_bus_icon" />

                <TextView
                    style="@style/hosipital_bus_text"
                    android:text="@string/hosipital_detail_detail" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hosipital_detail_text_detail"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>