<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_content"
            android:text="@string/text_card_number" />

        <EditText
            android:id="@+id/et_card_number"
            style="@style/style_edittext"
            android:hint="@string/hint_card_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_black_content"
            android:text="@string/text_idcard" />

        <EditText
            android:id="@+id/et_idcard"
            style="@style/style_edittext"
            android:hint="@string/hint_card_idcard" />
    </LinearLayout>

    <Button
        style="@style/style_button_green"
        android:layout_marginTop="20dp"
        android:text="@string/text_add" />
</LinearLayout>