<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout style="@style/layout_user_title">

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/icon_logo" />

        <TextView
            style="@style/text_black_title"
            android:layout_below="@id/head"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textColor="@color/text_blue" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_cellphone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/text_cellphone" />

        <EditText
            android:id="@+id/et_cellphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cellphone" />
    </LinearLayout>

    <View style="@style/setting_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/text_password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password" />
    </LinearLayout>

    <View style="@style/setting_line" />

    <Button
        android:id="@+id/login"
        style="@style/style_button"
        android:layout_marginTop="50dp"
        android:background="@color/background_green"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        style="@style/style_button"
        android:layout_marginTop="10dp"
        android:text="@string/register" />
</LinearLayout>