<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@mipmap/icon_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_black_title"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hosipital_detail_short"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout style="@style/hosipital_layout_bus">

        <ImageView style="@style/hosipital_bus_icon" />

        <TextView
            style="@style/hosipital_bus_text"
            android:text="@string/hosipital_guide_traffic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/hosipital_guide_traffic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="2路 3路" />
    </LinearLayout>

    <LinearLayout style="@style/hosipital_layout_bus">

        <ImageView style="@style/hosipital_bus_icon" />

        <TextView
            style="@style/hosipital_bus_text"
            android:text="@string/hosipital_guide_hotline" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="33333-22222" />

    <RelativeLayout style="@style/hosipital_layout_map">

        <ImageView style="@style/hosipital_map_icon" />

        <TextView
            style="@style/hosipital_nap_text"
            android:text="@string/hosipital_guide_guide_doctor" />

        <ImageView style="@style/hosipital_map_go" />
    </RelativeLayout>

    <RelativeLayout style="@style/hosipital_layout_map">

        <ImageView style="@style/hosipital_map_icon" />

        <TextView
            style="@style/hosipital_nap_text"
            android:text="@string/hosipital_guide_guide_map" />

        <ImageView style="@style/hosipital_map_go" />
    </RelativeLayout>

    <RelativeLayout style="@style/hosipital_layout_map">

        <ImageView style="@style/hosipital_map_icon" />

        <TextView
            style="@style/hosipital_nap_text"
            android:text="@string/hosipital_guide_local" />

        <ImageView style="@style/hosipital_map_go" />
    </RelativeLayout>

</LinearLayout>