<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_backgroud">

    <FrameLayout
        android:id="@id/fraHead"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="@color/background_red">

        <TextView
            android:id="@+id/head_back_text"
            style="@style/style_15_EBEBEB_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back_btn"
            android:gravity="center" />

        <TextView
            android:id="@+id/title"
            style="@style/style_18_BEBEBE_BOLD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/text_hxt_bind" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/fraHead"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/icon_hxtpay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:text="@string/card_no" />

            <com.honliv.honlivmall.view.MaterialTextField
                android:id="@+id/et_cardno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_hxt_cardno" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text"
                android:text="@string/text_pwd" />

            <com.honliv.honlivmall.view.MaterialTextField
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/hint_hxt_pwd"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/bind"
            style="@style/buttom"
            android:layout_height="48dp"
            android:background="@drawable/backgroundbutton"
            android:text="@string/text_bind" />
    </LinearLayout>

</RelativeLayout>
